Minor alignment fix

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,7 @@
 #logo {
     margin-top: 13px;
 }
+
+#content {
+    margin-top: 100px;
+}
